--- a/web/src/pages/TeacherForm/styles.css
+++ b/web/src/pages/TeacherForm/styles.css
@@ -38,6 +38,11 @@
   border-bottom: 1px solid var(--color-line-in-white);
 }
 
+#page-teacher-form fieldset .input-block + .textarea-block,
+#page-teacher-form fieldset .input-block + .input-block {
+  margin-top: 2.4rem;
+}
+
 #page-teacher-form main .input {
   color: var(--color-text-complement);
 }
